Criação do LoginResponse para a implementeação com o swagger
