# docs/swagger.json
@@ -6,7 +6,6 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "Login user in the application",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,13 +13,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Login"
+                    "auth"
                 ],
-                "summary": "Login",
+                "summary": "Login de usuário",
                 "parameters": [
                     {
-                        "description": "Request body",
-                        "name": "request",
+                        "description": "Credenciais de login",
+                        "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -28,7 +27,14 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.LoginResponse"
+                        }
+                    }
+                }
             }
         }
     },
@@ -40,6 +46,40 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "redirect": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/response.UserResponse"
+                }
+            }
+        },
+        "response.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "role": {
